--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="stylesheet" href="styles/styles.css" />
     <title>Clipboard Landing Page</title>
   </head>
 
@@ -29,7 +29,7 @@
     <main class="main-grid">
       <header class="main-header content-width">
         <div class="main-head-image-wrapper">
-          <img id="logo" src="./images/logo.svg" alt="clipboard logo" />
+          <img id="logo" src="images/logo.svg" alt="clipboard logo" />
         </div>
         <div>
           <h1>A history of everything you copy</h1>
@@ -55,7 +55,7 @@
         </header>
         <section class="snippet-content-wrapper">
           <div class="snippet-image-wrapper">
-            <img src="./images/image-computer.png" alt="image of a computer" />
+            <img src="images/image-computer.png" alt="image of a computer" />
           </div>
           <div class="sub-header">
             <div>
@@ -89,7 +89,7 @@
           </p>
         </header>
         <section class="device-image">
-          <img src="./images/image-devices.png" alt="image of devices" />
+          <img src="images/image-devices.png" alt="image of devices" />
         </section>
       </article>
 
@@ -100,7 +100,7 @@
         </header>
         <section class="workflow-content-wrapper">
           <div class="sub-header-logo">
-            <img src="./images/icon-blacklist.svg" />
+            <img src="images/icon-blacklist.svg" />
             <h3>Create blacklists</h3>
             <p>
               Ensure sensitive information never makes its way to your clipboard
@@ -108,7 +108,7 @@
             </p>
           </div>
           <div class="sub-header-logo">
-            <img src="./images/icon-text.svg" />
+            <img src="images/icon-text.svg" />
             <h3>Plain text snippets</h3>
             <p>
               Remove unwanted formatting from copied text for a consistent look.
@@ -123,10 +123,10 @@
           </div>
         </section>
         <footer class="company-logo-wrapper">
-          <img src="./images/logo-google.png" alt="google logo" />
-          <img src="./images/logo-ibm.png" alt="ibm logo" />
-          <img src="./images/logo-microsoft.png" alt="microsoft logo" />
-          <img src="./images/logo-hp.png" alt="hewlett packard logo" />
+          <img src="images/logo-google.png" alt="google logo" />
+          <img src="images/logo-ibm.png" alt="ibm logo" />
+          <img src="images/logo-microsoft.png" alt="microsoft logo" />
+          <img src="images/logo-hp.png" alt="hewlett packard logo" />
           <img
             src="./images/logo-vector-graphics.png"
             alt="vector graphics logo"
@@ -150,7 +150,7 @@
 
       <footer class="main-footer">
         <div class="footer-image-wrapper">
-          <img src="./images/logo.svg" alt="clipboard logo" />
+          <img src="images/logo.svg" alt="clipboard logo" />
         </div>
         <div class="footer-company-info">
           <a href="">FAQs</a>
