--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
             your Clipboard snippets in a few simple clicks.
           </p>
         </header>
-        <section class="device-image">
+        <div>
           <img src="images/image-devices.png" alt="image of devices" />
-        </section>
+        </div>
       </article>
 
       <article class="flex-article content-width">
@@ -100,7 +100,7 @@
         </header>
         <section class="workflow-content-wrapper">
           <div class="sub-header-logo">
-            <img src="images/icon-blacklist.svg" />
+            <img src="images/icon-blacklist.svg" aria-hidden="true" role="presentation"  />
             <h3>Create blacklists</h3>
             <p>
               Ensure sensitive information never makes its way to your clipboard
@@ -108,14 +108,14 @@
             </p>
           </div>
           <div class="sub-header-logo">
-            <img src="images/icon-text.svg" />
+            <img src="images/icon-text.svg" aria-hidden="true" role="presentation" />
             <h3>Plain text snippets</h3>
             <p>
               Remove unwanted formatting from copied text for a consistent look.
             </p>
           </div>
           <div class="sub-header-logo">
-            <img src="./images/icon-preview.svg" />
+            <img src="./images/icon-preview.svg" aria-hidden="true" role="presentation" />
             <h3>Sneak preview</h3>
             <p>
               Quick preview of all snippets on your Clipboard for easy access.
