--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </header>
         <section class="workflow-content-wrapper">
           <div class="sub-header-logo">
-            <img src="images/icon-blacklist.svg" aria-hidden="true" role="presentation"  />
+            <img src="images/icon-blacklist.svg" aria-hidden="true" role="presentation" alt="icon blacklist" />
             <h3>Create blacklists</h3>
             <p>
               Ensure sensitive information never makes its way to your clipboard
@@ -108,14 +108,14 @@
             </p>
           </div>
           <div class="sub-header-logo">
-            <img src="images/icon-text.svg" aria-hidden="true" role="presentation" />
+            <img src="images/icon-text.svg" aria-hidden="true" role="presentation" alt="icon text" />
             <h3>Plain text snippets</h3>
             <p>
               Remove unwanted formatting from copied text for a consistent look.
             </p>
           </div>
           <div class="sub-header-logo">
-            <img src="./images/icon-preview.svg" aria-hidden="true" role="presentation" />
+            <img src="./images/icon-preview.svg" aria-hidden="true" role="presentation" alt="icon preview" />
             <h3>Sneak preview</h3>
             <p>
               Quick preview of all snippets on your Clipboard for easy access.
